--- a/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizableDetailsScreen.strings
+++ b/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizableDetailsScreen.strings
@@ -1,1 +1,8 @@
 "details.title" = "Details of Posts";
+"details.author" = "Author:";
+"details.email" = "Email:";
+"details.loading" = "Loading...";
+"details.numberOfCommentsTitle" = "This post has: %@";
+
+"error.noConnection" = "You lost your connection. Try again later.";
+"error.default" = "Something went wrong";
