--- a/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizableDetailsScreen.strings
+++ b/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizableDetailsScreen.strings
@@ -5,4 +5,4 @@
 "details.numberOfCommentsTitle" = "This post has: %@";
 
 "error.noConnection" = "You lost your connection. Try again later.";
-"error.default" = "Something went wrong";
+"error.default" = "Comments can't load right now";
