--- a/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizablePostScreen.strings
+++ b/PostFeature/PostFeature/SupportingFiles/en.lproj/LocalizablePostScreen.strings
@@ -2,4 +2,5 @@
 "cell.title" = "";
 "cell.subtitle" = "";
 
+"post.dataFrom" = "Your data is from: %@";
 "error.default" = "Posts can't load right now";
